--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
                 <div class="details">
                     <div class="head">learn more</div>
                     <a href="#">www.website.com</a>
+                    <div class="number"><i class="fa-solid fa-calendar-days"></i> <p>call to find out more <br><b>000 1234 56789</b></p></div>
     
                 </div>
             </div>
             <div class="box2">
-                <img src="image1.avif" alt="">
-                <img src="image2.avif" alt="">
-                <div class="percent"></div>
-                <img src="image3.avif" alt="">
+                <div class="img1"><img src="image2.avif" alt=""></div>
+                <!-- <div class="img2"><img src="image2.avif" alt=""></div> -->
+                <div class="percent"> 30% off</div>
+                <div class="img3"><img src="image3.avif" alt=""></div>
             </div>
         </div>
     </div>
