--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
                 </div>
             </div>
             <div class="box2">
-                <div class="img1"><img src="image2.avif" alt=""></div>
-                <!-- <div class="img2"><img src="image2.avif" alt=""></div> -->
-                <div class="percent"> 30% off</div>
-                <div class="img3"><img src="image3.avif" alt=""></div>
+                <div class="box">
+                    <div class="img1"><img src="image2.avif" alt=""></div>
+                
+                    <div class="img3"><img src="image3.avif" alt=""></div>
+                </div>
+                <div class="percent">
+                    <p>50% off</p>
+                </div>
             </div>
         </div>
     </div>
